test/MC/AArch64/SVE/ftsmul-diagnostics.s
// RUN: not llvm-mc -triple=aarch64 -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s

// Invalid element kind.
ftsmul z27.d, z8.d, z31.x
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: Invalid SVE element size qualifier
// CHECK-NEXT: ftsmul z27.d, z8.d, z31.x
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:

// Element size specifiers should match.
ftsmul z18.d, z18.d, z6.b
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: invalid operand
// CHECK-NEXT: ftsmul z18.d, z18.d, z6.b
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:

